增加简易的JAVA版服务端；检测到目标的视频段不再写在本地，改为发送到服务端。

--- a/VideoTestForAndroid/res/values/strings.xml
+++ b/VideoTestForAndroid/res/values/strings.xml
@@ -2,5 +2,6 @@
 
     <string name="app_name">VideoTest</string>
     <string name="btn">开始</string>
+    <string name="socketTestBtnText">测试socket</string>
 
 </resources>
